# rustyrts

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  pyproject.toml  requirements.txt  rust-toolchain.toml  setup.py
.github/workflows/: cargo-test.yml  deploy-book.yml.disabled  install.yml.disabled  mutate-self.yaml.disabled  rust.yml  scorecards-analysis.yml.disabled  tests.yml
.helix/: config.toml
projects/git_walk/: README.md
projects/history/: README.md
projects/mutants/: README.md
rts_eval/: __init__.py
rts_eval/cli/: cli.py
rts_eval/cli/db/: commands.py
rts_eval/db/: base.py  git.py  mutants.py  testing.py
rts_eval/evaluation/: base.py  git_walker.py
rts_eval/evaluation/hooks/: cargo_base.py  cargo_mutants.py  cargo_rustyrts.py  cargo_test.py  scc.py
rts_eval/models/scm/: base.py  git.py
rts_eval/models/testing/: base.py  loader.py  mutants.py
rts_eval/util/logging/: cli.py  event.py  logger.py
rts_eval/util/os/: exec.py  temp.py
rustyrts/: long_running.py  mutants.py  short_running.py  small.py  walk_git.py  walk_git_hardcoded.py  walk_mutants.py  walk_small.py
rustyrts-dynamic-rlib/: Cargo.toml
rustyrts-dynamic-rlib/src/: fs_utils.rs  lib.rs
rustyrts-dynamic-runner/: Cargo.toml
rustyrts-dynamic-runner/src/: constants.rs  fifo.rs  fs_utils.rs  lib.rs  libtest.rs  pipe.rs  test_runner.rs  util.rs
rustyrts-dynamic-runner/src/test_runner/: mod.rs
rustyrts-static-sysroot/: Cargo.toml
rustyrts-static-sysroot/src/: main.rs
rustyrts/git/analysis/: testcases_contains_relation.py  testcases_different_not_selected.py  testcases_different_selected.py  testcases_failed_not_selected.py
rustyrts/mutants/analysis/: testcases_contains_relation.py  testcases_failed_not_selected.py
rustyrts/plots/: plotter.py  testcases_count_absolute.py  testcases_count_relative.py  testcases_failed_and_selected_relative.py  testcases_failed_not_selected_absolute.py
rustyrts/util/: plotter.py
rustyrts/walkers/: mutants_rts_walker.py  rustyrts_walker.py
rustyrts_eval/cli/: cli.py
rustyrts_eval/cli/analyze/: commands.py  labels.py  plots.py
rustyrts_eval/cli/db/: commands.py  consolidate.py  parse.py
rustyrts_eval/cli/evaluate/: commands.py
rustyrts_eval/db/: analysis.py  base.py  git.py  history.py  labels.py  mutants.py  plots.py  views.py
rustyrts_eval/evaluation/hooks/: base.py  cargo_base.py  cargo_mutants.py  cargo_rustyrts.py  cargo_test.py  scc.py
rustyrts_eval/evaluation/walkers/: gitwalker.py  history_walk.py  mutants_walk.py
rustyrts_eval/models/scm/: base.py  git.py
rustyrts_eval/models/testing/: base.py  mutants.py
rustyrts_eval/util/logging/: cli.py  event.py
rustyrts_eval/util/os/: exec.py
rustyrts_eval/util/scm/: git.py
src/: callbacks_shared.rs  cargo.rs  checksums.rs  const_visitor.rs  constants.rs  copy_tree.rs  format.rs  fs_utils.rs  info.rs  lab.rs  lib.rs  log_file.rs  main.rs  names.rs  options.rs  outcome.rs  package.rs  paths.rs  printer.rs  process.rs  source.rs  utils.rs  visit.rs  workspace.rs
src/analysis/: callback.rs  checksums.rs  util.rs  visitor.rs
src/doctest_rts/: dynamic.rs  mod.rs  rustdoc.rs  static.rs
src/dynamic_rts/: callback.rs  callback_doctest.rs  defid_util.rs  file_loader.rs  instrumentation.rs  mir_util.rs  mod.rs  visitor.rs
src/graph/: graph.rs
src/snapshots/: cargo_mutants_rts__visit__test__expected_mutants_for_own_source_tree.snap
src/static_rts/: callback.rs  callback_doctest.rs  graph.rs  mir_visitor.rs  mod.rs  visitor.rs
test-data/: Cargo.toml
test-data/blackbox/adt/: Cargo.toml
test-data/blackbox/assoc_items/: Cargo.toml
test-data/blackbox/blanket_impl/: Cargo.toml
test-data/blackbox/check_same_crate_id/: Cargo.toml
test-data/blackbox/closure/: Cargo.toml
test-data/blackbox/command/: Cargo.toml
test-data/blackbox/derive/: Cargo.toml
test-data/blackbox/doctests/: Cargo.toml  src_fibonacci_rs.checksum_new  src_fibonacci_rs.checksum_old
test-data/blackbox/doctests/src/: collatz.rs  collatz_compile_fail.rs  collatz_main.rs  collatz_no_run.rs  collatz_should_panic.rs  fibonacci.rs  fibonacci_main.rs  fibonacci_should_panic.rs  lib.rs
test-data/blackbox/drop/: Cargo.toml  with.dot  without.dot
test-data/blackbox/dynamic/: Cargo.toml
test-data/blackbox/fn_ptr/: Cargo.toml
test-data/blackbox/lazy/: Cargo.toml
test-data/blackbox/static_var/: Cargo.toml
test-data/blackbox/threading/: Cargo.toml
test-data/blackbox/unused_lifetime/: Cargo.toml
test-data/manual/adt/: Cargo.toml
test-data/manual/allocator/: Cargo.toml
test-data/manual/command/: Cargo.toml  bar[8b29fc9252b51b6e] copy.checksum  bar[8b29fc9252b51b6e].checksum  first  second
test-data/manual/conditional_compilation/: Cargo.toml
test-data/manual/derive/: Cargo.toml
test-data/manual/dyn_fn/: Cargo.toml
test-data/manual/dynamic/: checksums_new
test-data/manual/forking/: Cargo.toml
test-data/manual/integration/: Cargo.toml
test-data/manual/lazy/: Cargo.toml
test-data/manual/proc_macro_derive/: Cargo.toml
test-data/manual/renaming_variable/: Cargo.toml
test-data/manual/same_name/: Cargo.toml  same_name[bbbd7619f5586926].before
test-data/manual/scope_overriding/: Cargo.toml
test-data/manual/test_properties/: Cargo.toml
test-data/manual/test_returns_result/: Cargo.toml
test-data/manual/threading/: Cargo.toml  out
test-data/src/: closure.rs  function_call.rs  lib.rs  scalar.rs  unevaluated.rs
test-data/static/: Cargo.toml
test-data/static/src/: closure.rs  fndef.rs  impls.rs  scalar.rs  traits.rs
test-data/unit/src/: call.rs  lib.rs  traits.rs
tests/: blackbox.rs
tests/cli/: build_dir.rs  colors.rs  config.rs  error_value.rs  in_diff.rs  in_place.rs  jobs.rs  main.rs  nextest.rs  shard.rs  trace.rs  windows.rs  workspace.rs
tests/cli/snapshots/: cli__cargo_mutants_in_patch_dependency_tree_passes.snap  cli__cargo_mutants_in_relative_dependency_tree_passes.snap  cli__cargo_mutants_in_replace_dependency_tree_passes.snap  cli__factorial_mutants_no_copy_target.snap  cli__factorial_mutants_no_copy_target.snap.new  (+3 more)
(+187 files in other folders)
