[package]
name = "rustyrts"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private=true

[profile.release]
debug = true

[features]
default = []


[[bin]]
name = "cargo-rustyrts"

[[bin]]
name = "rustyrts-static"

[[bin]]
name = "rustyrts-static-doctest"

[[bin]]
name = "rustyrts-dynamic"

[dependencies]
cargo = "0.77.0"
cargo-util = "0.2.11"
anyhow = "1.0.83"
color-print = "0.3.6"
clap = "4.5.4"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
humantime = "2.1.0"
git2 = "0.18.3"
git2-curl = "0.19.0"
os_info = "3.8.2"
curl = "0.4.46"
curl-sys = "0.4.72+curl-8.6.0"
anstyle = "1.0.7"

log = "0.4"
serde_json = "1.0.61"
queues = "1.0.2"
itertools = "0.10.5"
test-log = "0.2.11"
env_logger = "0.10.0"
regex = "1.7.1"
lazy_static = "1.4.0"
once_cell = "1.17.1"
threadpool = "1.8.1"
bimap = "0.6.3"

[dev-dependencies]
tempdir = "0.3.7"
test-case = "3.1.0"
