[package]
name = "rustyrts"
version = "0.1.0"
edition = "2021"

[package.metadata.rust-analyzer]
rustc_private=true

[profile.release]
debug = true

[features]
default = []


[[bin]]
name = "cargo-rustyrts"

[[bin]]
name = "rustyrts-static"

[[bin]]
name = "rustyrts-static-doctest"

[[bin]]
name = "rustyrts-dynamic"

[dependencies]
cargo = "0.77.0"
cargo-util = "0.2.11"
git2 = "0.18.3"
git2-curl = "0.19.0"

anyhow = "1.0.83"

clap = "4.5.4"

tracing-subscriber = "0.3.18"
tracing = "0.1.40"
humantime = "2.1.0"

pulldown-cmark = "0.10.3"
internment = {version = "0.8.3", features = ["arena"]}

queues = "1.0.2"
itertools = "0.10.5"
regex = "1.7.1"
lazy_static = "1.4.0"
once_cell = "1.17.1"

[dev-dependencies]
tempdir = "0.3.7"
test-case = "3.1.0"
