[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel"]

[project]
name = "rustyrts-eval"
version = "0.1"
description = "Infrastructure for evaluating rustyrts"
dependencies = [
    'seaborn~=0.12.2',
    'matplotlib~=3.7.1',
    'pandas~=1.5.3',
    'setuptools~=65.6.3',
    'click==7.*,>=7.1.2',
    'gitpython==3.*,>=3.1.3',
    'halo==0.*,>=0.0.29',
    'sqlalchemy==1.*,>=1.3.17',
    'psycopg2-binary==2.*,>=2.8.6',
    'sqlalchemy-utils>=0.41.1',
    'sqlalchemy-views>=0.3.2'
]

[tool.setuptools]
packages=[
    'rustyrts_eval',
    'rustyrts_eval.cli',
    'rustyrts_eval.cli.db',
    'rustyrts_eval.db',
    'rustyrts_eval.models',
    'rustyrts_eval.models.scm',
    'rustyrts_eval.models.testing',
    'rustyrts_eval.models.testing.loaders',
    'rustyrts_eval.util',
    'rustyrts_eval.util.logging',
    'rustyrts_eval.util.os',
    'rustyrts_eval.util.scm',
    'rustyrts_eval.evaluation',
    'rustyrts_eval.evaluation.hooks'
]

[project.scripts]
rustyrts_eval = "rustyrts_eval.cli.cli:entry_point"
